--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,10 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "./node_modules/sequential-workflow-designer/css/designer.css",
+              "./node_modules/sequential-workflow-designer/css/designer-light.css",
+              "./node_modules/sequential-workflow-designer/css/designer-dark.css"
             ],
             "scripts": []
           },
