--- a/angular.json
+++ b/angular.json
@@ -34,7 +34,8 @@
               "src/styles.css",
               "./node_modules/sequential-workflow-designer/css/designer.css",
               "./node_modules/sequential-workflow-designer/css/designer-light.css",
-              "./node_modules/sequential-workflow-designer/css/designer-dark.css"
+              "./node_modules/sequential-workflow-designer/css/designer-dark.css",
+              "node_modules/primeng/resources/themes/lara-light-blue/theme.css"
             ],
             "scripts": []
           },
