--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "primeflex": "^3.3.1",
+    "primeng": "^16.0.2",
     "rxjs": "~7.8.0",
     "sequential-workflow-designer": "^0.21.1",
     "sequential-workflow-designer-angular": "^0.21.1",
